redesign grid way points.

--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
     <div id="coffee-modal" class="fixed w-full h-full bg-none flex justify-center items-center pointer-events-none select-none z-45">
       <div id="coffee-cup-hud" class="relative landscape:w-[30%] landscape:h-auto portrait:w-auto portrait:h-[30%] hidden justify-center items-center pointer-events-none select-none opacity-0">
         <img src="/resources/ui/coffee-cup.svg" alt="Coffee cup" class="w-full h-full">
-        <p id="coffee-type" class="absolute inset-0 m-auto text-center font-playpen text-gray-800/70 text-xl w-1/3 h-fit -rotate-12 text-[clamp(0.7rem,1.2vw,1.2rem)] text-wrap">BLACK COFFEE</p>
+        <p id="coffee-type" class="absolute inset-0 m-auto text-center font-sriracha text-gray-800/70 text-xl w-1/3 h-fit -rotate-12 text-[clamp(0.7rem,1.2vw,1.2rem)] text-wrap">BLACK COFFEE</p>
       </div>
     </div>
 
     <!-- Coffee shop HUD -->
-    <div id="coffee-menu-hud" class="absolute inset-0 m-auto landscape:w-3/4 landscape:lg:w-1/2 portrait:w-full h-auto hidden opacity-0 landscape:flex-row portrait:flex-col gap-3 justify-center items-center font-playpen py-6 px-4">
+    <div id="coffee-menu-hud" class="absolute inset-0 m-auto landscape:w-3/4 landscape:lg:w-1/2 portrait:w-full h-auto hidden opacity-0 landscape:flex-row portrait:flex-col gap-3 justify-center items-center font-sriracha py-6 px-4">
       <svg width="100%" height="100%" viewBox="0 0 3009 2175" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
         <rect id="Artboard1" x="0" y="0" width="3008.33" height="2175"/>
         <g id="Artboard11" serif:id="Artboard1">
