--- a/index.html
+++ b/index.html
@@ -59,11 +59,24 @@
         <img src="/resources/ui/music-note.svg" alt="Music note" id="img-music-note" class="size-12 m-auto">
         <img src="/resources/ui/stop.svg" alt="Music stop" id="img-music-stop" class="absolute inset-0 size-8 m-auto">
       </button>
+      <button id="btn-orbit-mode" class="size-12 bg-[url('/resources/ui/icon-bg.svg')] bg-no-repeat bg-center cursor-pointer hover:scale-105 transition-all active:scale-95 ease-in-out duration-200 pointer-events-auto">
+        <img src="/resources/ui/orbit-mode.svg" alt="Orbit mode" id="img-orbit-mode" class="size-10 m-auto">
+      </button>
       <button id="btn-info" class="size-12 bg-[url('/resources/ui/icon-bg.svg')] bg-no-repeat bg-center cursor-pointer hover:scale-105 transition-all active:scale-95 ease-in-out duration-200 pointer-events-auto">
         <img src="/resources/ui/info.svg" alt="Info" id="img-info" class="size-12 m-auto">
       </button>
       
     </div>
+
+    <!-- bottom message -->
+     <div id="bottom-message" class="w-auto h-16 absolute inset-x-0 mx-auto bottom-1 z-50 bg-none hidden opacity-0 flex-row gap-1 sm:gap-2 justify-center items-center select-none pointer-events-none">
+      <p id="bottom-message-text" class="font-sriracha text-white/90 text-lg text-center bg-black/50 rounded-md py-2 px-4">
+        Enter Orbit Mode
+      </p>
+     </div>
+
+    <!-- Exit Orbit Controls -->
+    <button id="btn-exit-orbit" class="absolute top-1 right-1 size-12 bg-[url('/resources/ui/icon-bg.svg')] bg-no-repeat bg-center cursor-pointer hover:scale-105 transition-all active:scale-95 ease-in-out duration-200 pointer-events-auto hidden opacity-0 font-sriracha">Exit</button>
 
     <!-- Coffee cup HUD -->
     <div id="coffee-modal" class="fixed w-full h-full bg-none flex justify-center items-center pointer-events-none select-none z-45">
@@ -185,6 +198,7 @@
           <p class="mb-1 font-semibold text-yellow-200">Illustrations</p>
           <ul class="list-disc list-inside mb-3 text-sm space-y-1">
             <li><a href="https://www.ac-illust.com/main/detail.php?id=549838" target="_blank" class="underline text-yellow-400 hover:text-yellow-300">ピエロルイジ</a></li>
+            <li><a href="http://www.freepik.com" target="_blank" class="underline text-yellow-400 hover:text-yellow-300">Signage Line art designed by rawpixel.com / Freepik</a></li>
           </ul>
 
           <p class="mb-1 font-semibold text-yellow-200">Background Music (BGM)</p>
