--- a/index.html
+++ b/index.html
@@ -201,11 +201,12 @@
             <li><a href="http://www.freepik.com" target="_blank" class="underline text-yellow-400 hover:text-yellow-300">Signage Line art designed by rawpixel.com / Freepik</a></li>
           </ul>
 
-          <p class="mb-1 font-semibold text-yellow-200">Background Music (BGM)</p>
+          <p class="mb-1 font-semibold text-yellow-200">Background Music (BGM) and Sound Effects (SFX)</p>
           <ul class="list-disc list-inside mb-3 text-sm space-y-1">
             <li><a href="https://pixabay.com/ja/music/%E3%83%93%E3%83%BC%E3%83%88-chill-lofi-music-409356/" target="_blank" class="underline text-yellow-400 hover:text-yellow-300">chill-lofi-music-409356.mp3</a></li>
             <li><a href="https://pixabay.com/ja/music/%E3%83%93%E3%83%BC%E3%83%88-lofi-boy-serene-strings-lofi-instrumental-278238/" target="_blank" class="underline text-yellow-400 hover:text-yellow-300">lofi-boy-serene-strings-lofi-instrumental-278238.mp3</a></li>
             <li><a href="https://pixabay.com/ja/music/%E3%83%93%E3%83%BC%E3%83%88-wave-of-you-relaxing-lofi-305565/" target="_blank" class="underline text-yellow-400 hover:text-yellow-300">wave-of-you-relaxing-lofi-305565.mp3</a></li>
+            <li><a href="https://pixabay.com/sound-effects/taking-a-polaroid-photo-100097/" target="_blank" class="underline text-yellow-400 hover:text-yellow-300">taking-a-polaroid-photo-100097.mp3</a></li>
           </ul>
 
           <p class="mb-1 font-semibold text-yellow-200">Skybox</p>
@@ -239,6 +240,26 @@
             Close
           </button>
         </div>
+      </div>
+    </div>
+
+    <!-- View finder -->
+     <div id="view-finder" class="fixed inset-0 w-full h-full pointer-events-none select-none z-40 overflow-hidden bg-[url('/resources/ui/view-finder.svg')] bg-no-repeat bg-center bg-cover hidden opacity-0">
+    </div>
+
+    <!-- Photo frame -->
+    <div id="photo-frame-hud" class="fixed inset-0 w-full h-full pointer-events-none select-none z-50 justify-center items-center overflow-hidden hidden opacity-0">
+      <div id="photo-frame-outer" class="relative landscape:w-1/2 landscape:lg:w-1/3 landscape:h-auto portrait:w-auto portrait:h-1/2 aspect-88/107 bg-white flex flex-col justify-start items-center p-[2.5%] shadow-lg shadow-[rgba(0,0,0,0.5)]">
+        <div id="photo-frame" class="w-full h-auto aspect-square bg-white flex flex-col justify-start items-center overflow-hidden pointer-events-auto ">
+          <div id="photo-content" class="w-full h-full bg-black/10 border-4 border-white shadow-inner shadow-[rgba(0,0,0,0.3)] overflow-hidden bg-center bg-no-repeat bg-cover">
+            <!-- Photo content will be injected here -->
+          </div>
+        </div>
+        <div id="photo-caption" class="w-full h-auto mt-2 text-center font-sriracha text-gray-800/70 text-lg">My Autumn Cozy Place</div>
+
+        <button id="btn-back-photo-frame" class="absolute -bottom-2 -right-2 size-12 bg-[url('/resources/ui/icon-bg.svg')] bg-no-repeat bg-center cursor-pointer hover:scale-105 transition-all active:scale-95 ease-in-out duration-200 pointer-events-auto font-sriracha">
+          Back
+        </button>
       </div>
     </div>
   </body>
