--- a/index.html
+++ b/index.html
@@ -31,8 +31,12 @@
       </div>
     </div>
 
-    <!-- Menu bar UI -->
-    <div id="menu-bar" class="w-auto h-16 absolute inset-x-0 mx-auto bottom-1 z-50 bg-none hidden opacity-0 flex-row gap-1 sm:gap-2 justify-center items-center select-none pointer-events-none">
+    <!-- Corner Menu UI -->
+    <div id="corner-menu" class="w-16 h-auto absolute top-0 left-0 z-50 bg-none flex flex-col gap-1 py-2 justify-start items-center select-none pointer-events-auto">
+      <button id="btn-music" class="relative size-12 bg-[url('/resources/ui/icon-bg.svg')] bg-no-repeat bg-center cursor-pointer hover:scale-105 transition-all active:scale-95 ease-in-out duration-200">
+        <img src="/resources/ui/music-note.png" alt="Music note" id="img-music-note" class="size-12 m-auto">
+        <img src="/resources/ui/stop.png" alt="Music stop" id="img-music-stop" class="absolute inset-0 size-8 m-auto">
+      </button>
       <button id="btn-maple-green" class="size-12 bg-[url('/resources/ui/icon-bg.svg')] bg-no-repeat bg-center cursor-pointer hover:scale-105 transition-all active:scale-95 ease-in-out duration-200">
         <img src="/resources/ui/maple-green.png" alt="Green maple" id="img-maple-green" class="size-12 m-auto">
       </button>
@@ -42,6 +46,10 @@
       <button id="btn-maple-red" class="size-12 bg-[url('/resources/ui/icon-bg.svg')] bg-no-repeat bg-center cursor-pointer hover:scale-105 transition-all active:scale-95 ease-in-out duration-200">
         <img src="/resources/ui/maple-red.png" alt="Red maple" id="img-maple-red" class="size-12 m-auto">
       </button>
+    </div>
+
+    <!-- Menu bar UI -->
+    <div id="menu-bar" class="w-auto h-16 absolute inset-x-0 mx-auto bottom-1 z-50 bg-none hidden opacity-0 flex-row gap-1 sm:gap-2 justify-center items-center select-none pointer-events-none">
       <button id="btn-coffee" class="relative size-12 bg-[url('/resources/ui/icon-bg.svg')] bg-no-repeat bg-center cursor-pointer hover:scale-105 transition-all active:scale-95 ease-in-out duration-200 pointer-events-auto">
         <img src="/resources/ui/coffee-cup.png" alt="Coffee cup" id="img-coffee" class="size-12 m-auto">
         <img src="/resources/ui/trash-bin.png" alt="Trash bin" id="img-trash-bin" class="absolute inset-0 size-12 m-auto hidden">
@@ -55,17 +63,12 @@
       <button id="btn-camera-360" class="size-12 bg-[url('/resources/ui/icon-bg.svg')] bg-no-repeat bg-center cursor-pointer hover:scale-105 transition-all active:scale-95 ease-in-out duration-200 pointer-events-auto">
         <img src="/resources/ui/camera-360.png" alt="360 Camera" id="img-camera-360" class="size-12 m-auto">
       </button>
-      <button id="btn-music" class="relative size-12 bg-[url('/resources/ui/icon-bg.svg')] bg-no-repeat bg-center cursor-pointer hover:scale-105 transition-all active:scale-95 ease-in-out duration-200">
-        <img src="/resources/ui/music-note.png" alt="Music note" id="img-music-note" class="size-12 m-auto">
-        <img src="/resources/ui/stop.png" alt="Music stop" id="img-music-stop" class="absolute inset-0 size-8 m-auto">
-      </button>
       <button id="btn-orbit-mode" class="size-12 bg-[url('/resources/ui/icon-bg.svg')] bg-no-repeat bg-center cursor-pointer hover:scale-105 transition-all active:scale-95 ease-in-out duration-200 pointer-events-auto">
         <img src="/resources/ui/orbit-mode.png" alt="Orbit mode" id="img-orbit-mode" class="size-10 m-auto">
       </button>
       <button id="btn-info" class="size-12 bg-[url('/resources/ui/icon-bg.svg')] bg-no-repeat bg-center cursor-pointer hover:scale-105 transition-all active:scale-95 ease-in-out duration-200 pointer-events-auto">
         <img src="/resources/ui/info.png" alt="Info" id="img-info" class="size-12 m-auto">
       </button>
-      
     </div>
 
     <!-- bottom message -->
