animate menu bar on start.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
 
     <!-- Corner Menu UI -->
-    <div id="corner-menu" class="w-16 h-auto absolute top-0 left-0 z-50 bg-none flex flex-col gap-1 py-2 justify-start items-center select-none pointer-events-auto">
+    <div id="corner-menu" class="w-16 h-auto absolute top-0 left-0 z-50 bg-none hidden flex-col gap-1 py-2 justify-start items-center select-none pointer-events-auto opacity-0">
       <button id="btn-music" class="relative size-12 bg-[url('/resources/ui/icon-bg.svg')] bg-no-repeat bg-center cursor-pointer hover:scale-105 transition-all active:scale-95 ease-in-out duration-200">
         <img src="/resources/ui/music-note.png" alt="Music note" id="img-music-note" class="size-12 m-auto">
         <img src="/resources/ui/stop.png" alt="Music stop" id="img-music-stop" class="absolute inset-0 size-8 m-auto">
